Fixed the loading screen flicker when redirect issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -73,5 +73,5 @@
 }
 
 .animate-loading-bar {
-	animation: loading-bar 1.5s linear infinite;
+	animation: loading-bar 1s linear infinite;
 }
